## [2.2] - ?
### Added
### Changed
### Fixed

## [2.1] - 2017-12-20
### Version: 20171220
### Build: 20171220.1144

### Added
- Now the Comet command checks for the extension of the mz files, it skips files that are not supported for indexing, Database search keeps working the same way.

### Changed
- The Protein column on the reports will be replaced by the Razor Protein when the option is added.

### Fixed
- Some reports were showing empty protein columns.

## [2.0] - 2017-12-14
### Added
- A new parameter on Filter adds more flexibility to the definition of a 'Unique' peptide.
- A new parameter on labelquant allows to report quantification on 'unique-only' peptides (no razor).
- Comet function now has an indexing step that creates indexes from mzML files.

### Changed
- Report and TMT report have their headers fixed, Razor ions are showing again.
- non-modified peptides are now ignored from the TMT quantification.
- Speed and efficiency of the labelquant option are now improved, process is faster and memory-efficient.

### Fixed
- Several bug fixes added to the code.

## [1.9] - 2017-11-31
### Added
- Decoy option to reports allowing decoys to be reported

### Changed
- TMT processing is now faster
- TMT label names are not the channel name

### Fixed
- Several small bugs and code-fixes
- PSM purity score based on ion interference
- PSM TMT levels had a problem with the ppm tolerance

## [1.8] - 2017-10-02
### Added
- Razor quant to abacus report
### Fixed
- Abacus processing had some issues with locating data sets

## [1.7] - 2017-09-12
### Added
- TMT quant is back to the menu

### Fixed
- MS1 quantification and TMT label quantification had bugs fixed.

## [1.6] - 2017-08-29
### Changed
- Processing time for the filter command reduced dramatically.

### Fixed
- Big data sets were failing because of the size limit of the binary files

## [1.5] - 2017-08-08
### Added
- N-terminal modifications added to report
- Modified amino acid index position added to report
